# aigis-governance

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  README.pt-br.md  SETUP.md  STYLES.md  docker-compose.yml  ecosystem.config.js  ecosystem.setup.config.js  list_extensions.py  package.json  pyproject.toml  services.config.js  setup.config.js  todo.md
agent-gateway/: .env.example  my_extension_backup.json  pyproject.toml  setup-agent-gateway.sh  start-agent-gateway.sh
aigis-backend/: AGENTS.md  playground.ipynb  pyproject.toml
aigis-backend/app/: agent.py  main.py
aigis-backend/core/: database.py  model.py  types.py
aigis-backend/prompts/: system_prompts.py
aigis-backend/tools/: db_schema_tool.py  nl_to_sql_tool.py  plotting_tool.py
backend/: .dockerignore  .env.example  AUTH_README.md  Dockerfile  README.md  backend_example.py  entrypoint.sh  list_extensions.py  package-lock.json  package.json  playground.ipynb  pyproject.toml  sample_conversations.db  sample_sales.db  server.js  setup-backend.sh  start-backend.sh  start_server.sh
backend/alembic/: env.py
backend/alembic/versions/: 104b60ecd1c1_create_threads_and_messages_tables.py  54c53cc7d5b7_create_users_table.py  6b4606763e8e_create_user_connections_table.py  7f0a9b2c1e3a_add_selected_model_to_threads.py  8386b225d990_create_table_name_column_in_user_.py
backend/api/: auth.py
backend/app/: agent.py  main.py  state.py  utils.py
backend/app/helpers/: langgraph.py  user_connections.py
backend/app/routes/: auth.py  chat.py  connections.py  models.py
backend/auth/: __init__.py  dependencies.py  utils.py
backend/core/: config.py  crypto.py  database.py  model.py  tenancy.py  types.py
backend/crud/: __init__.py  connection.py  thread.py  user.py
backend/data_science/: agent.py  prompts.py
backend/data_science/sub_agents/analytics/: agent.py  prompts.py  tools.py
backend/docs/: sample-response.json
backend/examples/: database_usage.py
backend/llm/: agent.py  model.py  prompts.py  tools.py
backend/models/: __init__.py  thread.py  user.py  user_connection.py
backend/prompts/: aigis.py
backend/schemas/: __init__.py  connection.py  thread.py  user.py
backend/scripts/: create_user_schemas.py  generate_sample_csv.py  generate_sample_database.py  generate_sample_database.sh  load_artifact.py
backend/tests/: conftest.py  test_auth_router.py  test_chat_router.py
backend/tools/: aigis.py
docs/: broken-response  sample-charts.md  sample-load-artifact-response.json  sample-sse-response  sample-sse-response-with-artifact  sample-sse-response-with-partials  sample-tables.md  sample_run_request.json  sample_run_response.json
frontend/: .dockerignore  .env.example  (+11 more)
(+33 files in other folders)
